--- a/src/components/ContextMenu/ContextMenu.module.scss
+++ b/src/components/ContextMenu/ContextMenu.module.scss
@@ -20,6 +20,8 @@
     height: 100px;
     border-radius: 8px;
     outline: 0;
+    border: 0;
+    cursor: pointer;
     // box-shadow: 10px, red;
     box-shadow: 2px 2px 5px hsla(204, 80%, 16%);
     img {
