--- a/src/pages/Game/Game.module.scss
+++ b/src/pages/Game/Game.module.scss
@@ -1,8 +1,8 @@
 .Game {
   // padding-top: 100px;
-  // background-color: hsla(215, 19%, 35%);
+  background-color: hsla(215, 19%, 35%);
   position: relative;
-  > img {
+  .gameImg {
     cursor: crosshair;
     // padding-top: 200px;
     // min-height: 100vh;
@@ -12,5 +12,8 @@
   }
   .hidden {
     display: none;
+  }
+  .blur {
+    filter: blur(20px);
   }
 }
